--- a/es-data-pdb.yaml
+++ b/es-data-pdb.yaml
@@ -7,5 +7,4 @@ spec:
   maxUnavailable: 1
   selector:
     matchLabels:
-      component: elasticsearch
-      role: data
+      app: elasticsearch
