--- a/es-svc.yaml
+++ b/es-svc.yaml
@@ -1,16 +1,16 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: elasticsearch
   namespace: elk
-  labels:
-    component: elasticsearch
-    role: data
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: alb
+    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
 spec:
   selector:
-    component: elasticsearch
-    role: data
+    app: elasticsearch
+  type: LoadBalancer
   ports:
-  - name: http
-    port: 9200
-#type: LoadBalancer
+    - protocol: TCP
+      port: 9200
