--- a/kibana.yaml
+++ b/kibana.yaml
@@ -4,16 +4,16 @@ metadata:
   name: kibana
   namespace: elk
   labels:
-    component: kibana
+    app: kibana
 spec:
   replicas: 1
   selector:
     matchLabels:
-     component: kibana
+     app: kibana
   template:
     metadata:
       labels:
-        component: kibana
+        app: kibana
     spec:
       containers:
       - name: kibana
