--- a/es-ingest.yaml
+++ b/es-ingest.yaml
@@ -25,7 +25,7 @@ spec:
           privileged: true
       containers:
       - name: es-ingest
-        image: abraaojs/docker-elasticsearch-kubernetes:6.3.2
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.13.2
         env:
         - name: NAMESPACE
           valueFrom:
